<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movie.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:scaleType="fitXY"
            android:src="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cd_image_poster" />


        <TextView
            android:id="@+id/tv_detail_title_movie"
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster"
            tools:text="Title Movie Detail" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title_movie">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/img_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_baseline_timer_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_duration_detail_movie"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/img_duration"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/img_duration"
                    tools:text="2h 15m" />

                <ImageView
                    android:id="@+id/img_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_duration"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_baseline_date_range_24"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:id="@+id/tv_release_detail_movie"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/img_release"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/img_release"
                    tools:text="Sep 15, 2019" />

                <ImageView
                    android:id="@+id/img_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_release"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_baseline_star_24"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:id="@+id/tv_score_detail_movie"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/img_start"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/img_start"
                    android:text="@string/score_movie" />


            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/overview_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_description_detail_movie"
                    style="@style/TextContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="gravity"
                    tools:text="@string/loremipsum" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>